--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,8 @@ button {
     order: 2;
     font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 1.2rem;
-    margin-top: -130px;
+    margin-top: 130px;
+    color: gray;
 }
 
 .imgAlerta {
